# JumpSync

./: .gitignore  README.md
macos/JumpSync/: Info.plist  JumpSync.entitlements  JumpSyncApp.swift
macos/JumpSync.xcodeproj/: project.pbxproj
macos/JumpSync/Config/: AppConfiguration.swift
macos/JumpSync/Models/: AppState.swift  SyncLogEntry.swift  SyncState.swift  SyncableContact.swift  SyncableNote.swift  SyncableReminder.swift
macos/JumpSync/Services/: APIClient.swift  CLIRunner.swift  ContactsService.swift  MarkdownWriter.swift  NotesService.swift  RemindersService.swift  SQLiteNotesService.swift  SyncCoordinator.swift
macos/JumpSync/Views/: ConfigurationView.swift  HistoryView.swift  MainWindowView.swift  MenuBarView.swift  SummaryView.swift
macos/Media.xcassets/AppIcon.appiconset/: Contents.json
macos/Scripts/: notes_exporter.sh
server/: Packaging.md  main.py  pyproject.toml
server/models/: schemas.py
server/routers/: sync.py
server/services/: markdown_writer.py
website/: index.html  script.js  style.css
