[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jumpsync-server"
version = "1.0.0"
description = "JumpSync FastAPI Backend Server"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv"
]
requires-python = ">=3.9"

[project.scripts]
# This allows running 'start-jumpsync' straight from the command line on the server if needed
start-jumpsync = "main:app"

[tool.setuptools]
# Explicitly define which files and folders to package, excluding things like 'venv'
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["routers*", "models*", "services*", "data*"]
exclude = ["venv*", ".git*", "__pycache__*"]
